# custom-tcg

./: .gitignore  README.md  custom-tcg.code-workspace  environment.yaml  pyproject.toml
.github/workflows/: pytest.yaml
custom_tcg/: __init__.py  game.py  main.py  scratchpad.ipynb
custom_tcg/common/: __init__.py  card_class_def.py  card_type_def.py  player.py
custom_tcg/common/action/: __init__.py  deliver.py  drop.py  find.py  held_evaluator.py  hold.py  search.py  select_by_held.py
custom_tcg/common/being/: __init__.py  aged_prophet.py  aimless_wanderer.py  apprentice_carpenter.py  apprentice_smith.py  desperate_shepherd.py  destructive_darryl.py  early_architect.py  fire_dancer.py  last_survivor.py  peasant.py  questionable_butcher.py  resourceful_preacher.py  seamstress.py  sheep.py  skilled_hunter.py  that_pebble_girl.py  the_stewmaker.py
custom_tcg/common/docs/: Being Stats Table.csv  Card Dependency Diagram - Common.drawio  Item Stats Table.csv  Material Synergy Diagram.drawio
custom_tcg/common/effect/: __init__.py  being_stats.py  being_stats_evaluator.py  burnable.py  (+6 more)
custom_tcg/core/: __init__.py  action.py  anon.py  dimension.py  game.py  interface.py  util.py
custom_tcg/feast_or_famine/: __init__.py  effect.py
custom_tcg/game_api/: __init__.py  main.py  socket_action_queue.py
custom_tcg/game_ui/: .prettierrc  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json
custom_tcg/test/: __init__.py  test_game_e2e_complex.py  test_game_e2e_desperate_shepherd.py  test_game_e2e_end_and_cancel.py  test_game_e2e_end_only.py
(+150 files in other folders)
